--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,11 @@
 body {
-  margin: 0;
+  width: 400px;
+  margin: 50px auto;
   padding: 0;
   font-family: sans-serif;
+}
+
+.new-item {
+  margin: 0 auto;
+  display: block !important;
 }
